added Movies Model

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.1",
+    "mongoose": "^6.6.5",
     "morgan": "~1.9.1",
     "npm": "^8.19.2",
     "popper.js": "^1.16.1"
   },
   "description": "assignment1 for COMP229",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/abhayashta12/Assignment_1.git"
